--- a/Project_2/config/config.json
+++ b/Project_2/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "exampledb",
+    "username": "development",
+    "password": "development",
+    "database": "project2",
     "host": "localhost",
+    "port": 8889,
     "dialect": "mysql"
   },
   "test": {
