fleshed out models and database

--- a/Project_2/config/config.json
+++ b/Project_2/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "development",
-    "password": "development",
+    "username": "root",
+    "password": "root",
     "database": "project2",
     "host": "localhost",
     "port": 8889,
