--- a/Project_2/package.json
+++ b/Project_2/package.json
@@ -17,7 +17,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "method-override": "^3.0.0",
+    "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
+    "nodemon": "^1.18.4",
     "passport-local": "^1.0.0",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2"
