--- a/Project_2/package.json
+++ b/Project_2/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2"
   },
